[gd_scene load_steps=6 format=3 uid="uid://bvfeod7l0owyv"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_js4vf"]
[ext_resource type="Material" uid="uid://cky1ubsgjs5n4" path="res://materials/basic/PlayerBlue.tres" id="1_lua55"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mafk2"]
material = ExtResource("1_lua55")

[sub_resource type="BoxMesh" id="BoxMesh_i70lx"]
material = ExtResource("1_lua55")
size = Vector3(0.15, 0.15, 0.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_f4g2i"]
size = Vector3(1, 1.7525, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_js4vf")

[node name="Pivot" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Pivot"]
layers = 2
mesh = SubResource("CapsuleMesh_mafk2")

[node name="Hand" type="Node3D" parent="Pivot/BodyMesh"]

[node name="HandMesh" type="MeshInstance3D" parent="Pivot/BodyMesh/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.1, -0.45)
layers = 2
mesh = SubResource("BoxMesh_i70lx")
skeleton = NodePath("../..")

[node name="PickUpPosition" type="Node3D" parent="Pivot/BodyMesh/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1.1)

[node name="HandsReach" type="RayCast3D" parent="Pivot/BodyMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1.5)
collision_mask = 5

[node name="FeetReach" type="RayCast3D" parent="Pivot/BodyMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, -1.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_f4g2i")
